Includes minified libs

--- a/public/index.html
+++ b/public/index.html
@@ -77,8 +77,8 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src = "/assets/libs/angular-1.4.8/angular.js"></script>
-    <script src = "/assets/libs/angular-1.4.8/angular-route.js"></script>
+    <script src = "/assets/libs/angular-1.4.8/angular.min.js"></script>
+    <script src = "/assets/libs/angular-1.4.8/angular-route.min.js"></script>
     <script src = "/assets/libs/angular-1.4.8/angular-locale_fr-fr.js"></script>
     <script src = "/assets/libs/angular-translate.js"></script>
     <script src = "/assets/libs/ui-bootstrap-tpls-1.0.3.js"></script>
